--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -13,12 +13,12 @@
             <%= render FormComponents::PasswordField::Component.new(
               form: f,
               input_name: :password,
-              input_text: "New Password"
+              label_text: "New Password"
             ) %>
             <%= render FormComponents::PasswordField::Component.new(
               form: f,
               input_name: :current_password,
-              input_text: "Confirm New Password"
+              label_text: "Confirm New Password"
             ) %>
             <div class="flex flex-col gap-4">
               <%= f.submit "Save", class: "btn btn-primary w-full h-12" %>
